[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/zone/duel-master-back.png" type="Texture" id=1]
[ext_resource path="res://src/Zone.gd" type="Script" id=2]
[ext_resource path="res://assets/card/Duel_Masters_cardback.png" type="Texture" id=3]

[node name="Zone" type="Node2D"]
script = ExtResource( 2 )

[node name="Zone Mat" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Deck1" type="TextureButton" parent="."]
visible = false
margin_left = 895.0
margin_top = 407.0
margin_right = 995.0
margin_bottom = 547.0
texture_normal = ExtResource( 3 )
expand = true

[node name="Deck2" type="TextureButton" parent="."]
visible = false
margin_left = 224.0
margin_top = 54.0
margin_right = 324.0
margin_bottom = 194.0
texture_normal = ExtResource( 3 )
expand = true
flip_v = true

[node name="HBox" type="HBoxContainer" parent="."]
margin_top = 324.0
margin_right = 1080.0
margin_bottom = 698.0
rect_min_size = Vector2( 1080, 374 )
rect_scale = Vector2( 0.7, 0.7 )
alignment = 1

[connection signal="pressed" from="Deck1" to="." method="_on_Deck1_pressed"]
[connection signal="pressed" from="Deck2" to="." method="_on_Deck2_pressed"]
